<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="author_avatar" translatable="false">Author avatar</string>
    <string name="menu_button" translatable="false">Menu button</string>
    <string name="post_likes" translatable="false">Likes</string>
    <string name="post_shares" translatable="false">Shares</string>
    <string name="post_watched" translatable="false">Watched</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Text cannot be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_post">Edit post</string>
    <string name="floppy_disk" translatable="false">Floppy disk</string>
    <string name="cancel_cross" translatable="false">Cancel cross</string>
    <string name="description_post_like">Button to like post</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="incoming_text_n">Incoming text\n</string>
    <string name="image_content">Image content</string>
    <string name="retry_text">Something went wrong. Try again later</string>
    <string name="retry">Retry</string>
    <string name="empty_posts_text">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="fresh_posts">New posts</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="photo">Photo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign out</string>
    <string name="retry_load">Retry</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="lastWeek">Last week</string>
</resources>