<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/toolsTop"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_post"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCancelEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/toolsTop"
        android:background="@android:color/white"
        android:visibility="invisible"
        tools:visibility="visible"
        >

        <TextView
            android:id="@+id/tvEditPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_post"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ibCancelEdit"
            app:layout_constraintBottom_toBottomOf="@id/ibCancelEdit"
            android:layout_margin="@dimen/common_space"

            />

        <ImageButton
            android:id="@+id/ibCancelEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_cancel_24"
            android:background="@android:color/transparent"
            android:layout_marginEnd="@dimen/common_space"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/cancel_cross" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/cancelTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:layout_constraintTop_toTopOf="parent"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="etContent, ibSave"/>

    <EditText
        android:id="@+id/etContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibSave"
        app:layout_constraintTop_toTopOf="@id/toolsTop"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/transparent"
        android:inputType="textMultiLine"
        android:padding="@dimen/common_space"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:maxLines="8"
        />

    <ImageButton
        android:id="@+id/ibSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_baseline_save_36"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/etContent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/common_space"
        android:contentDescription="@string/floppy_disk" />

</androidx.constraintlayout.widget.ConstraintLayout>
